# enigma-flappy-bird

./: Cargo.toml  README.md
src/: game_events.rs  game_resources.rs  game_ui.rs  game_update.rs  game_utils.rs  main.rs
src/res/: background.glb  bird.glb  coin.glb  pipe.glb
