[package]
name = "flappy_bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigma = { git = "https://github.com/JeremiasMeister/enigma", branch = "main" }
winit = "0.28.7"
rand = "0.8.5"
egui = "0.23.0"
egui_glium = "0.23.0"
egui-winit = "0.23.0"
